--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap": "^5.2.1",
+    "jquerry": "^0.0.1-security",
+    "jquery": "^3.7.1",
+    "ngx-quill": "^25.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
