--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@danielmoncada/angular-datetime-picker": "^17.0.0",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/list": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "bootstrap": "^5.2.1",
     "jquerry": "^0.0.1-security",
     "jquery": "^3.7.1",
