Added cypress tests

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fullcalendar/list": "^6.1.13",
     "@fullcalendar/timegrid": "^6.1.13",
     "bootstrap": "^5.2.1",
+    "cypress": "^13.11.0",
     "jquerry": "^0.0.1-security",
     "jquery": "^3.7.1",
     "ngx-quill": "^25.1.1",
@@ -40,6 +41,7 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "cypress-file-upload": "^5.0.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
